--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   place-items: center;
   height: 100vh;
   grid-template-areas:
+    "search search search search"
     "city city city city"
     "hourly hourly hourly hourly"
     "five-day five-day five-day five-day"
@@ -28,6 +29,27 @@ body {
   font-size: 16px;
   padding: 16px;
 }
+.search {
+  grid-area: search;
+}
+#input-cites {
+  display: grid;
+  width: 200px;
+  color: black;
+  text-align: center;
+  padding: 4px;
+}
+
+
+
+
+
+
+
+
+
+
+
 .city {
   grid-area: city;
   margin: 4px;
@@ -97,3 +119,6 @@ body {
     white-space: nowrap;
   }
 }
+
+
+
