--- a/style.css
+++ b/style.css
@@ -40,16 +40,6 @@ body {
   padding: 4px;
 }
 
-
-
-
-
-
-
-
-
-
-
 .city {
   grid-area: city;
   margin: 4px;
@@ -110,6 +100,24 @@ body {
   grid-area: humidity;
 }
 
+.material-symbols-rounded {
+  margin-left: 8px;
+  font-variation-settings: "FILL" 1, "wght" 300, "GRAD" -25, "opsz" 48;
+}
+
+.material-symbols-rounded:hover {
+  color: rgb(83, 127, 231);
+  transform: scale(1.2);
+  transition: 0.1s ease-in-out;
+  cursor: pointer;
+}
+
+#search-button-div {
+  display: flex;
+  text-align: center;
+}
+
+/* mobile responsive part */
 @media (width <=500px) {
   .inside-hourly-forecast {
     display: flex;
@@ -119,6 +127,3 @@ body {
     white-space: nowrap;
   }
 }
-
-
-
